# text2sql

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
app/: __init__.py  app.py  compare.py  main.py
app/cli/: __init__.py  compare.py  config_loader.py  generate_queries.py  main.py  rag_index.py
app/cli/compare/: __init__.py  cli.py
app/cli/execute_sql/: __init__.py  __main__.py  cli.py  config.py  executor.py  utils.py
app/cli/generate_queries/: __init__.py  __main__.py  cli.py  config.py  generator.py  initializers.py  parameters.py  processor.py  utils.py
app/cli/ground_truth/: __init__.py  __main__.py  cli.py
app/cli/rag_index/: __init__.py  cli.py
app/config/: __init__.py  constants.py  paths.py  styles.py  templates.py  theme.py
app/data/: __init__.py  loaders.py
app/llm/: README.md  __main__.py
app/llm/data/: splitter.py
app/llm/evaluate/: evaluate.py  generator.py
app/llm/model/: transformer.py  unsloth.py
app/llm/prompt/: generator.py
app/llm/rag/: __init__.py  retriever.py  schema_indexer.py  text2sql_rag.py
app/llm/training/: cross_validation.py  unsloth.py
app/llm/utils/: logger.py
app/metrics/: __init__.py  calculator.py  comparator.py
app/server/: __init__.py  handlers.py
app/ui/: __init__.py  components.py  layouts.py
app/utils/: __init__.py  dataframe.py  html_exporter.py  parameters.py  sql_formatter.py
app/utils/html/: __init__.py  charts.py  components.py  report.py  styles.py  (+1 more)
config/: compare_config.yaml  execute_config.yaml  generate_config.yaml  ground_truth_config.yaml  rag_index_config.yaml
